--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,9 +35,11 @@
     {% include links.html %}
 
     <p>
-      <span>Jekflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://jangwookchoi1.com" target="_blank" class="creator">ChoiJangWook</a>
+      <span>Jekflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://www.instagram.com/jangwookchoi1" target="_blank" class="creator">ChoiJangWook</a>
     </p>
 </footer>
+
+
 
 {% assign social_urls = '' %}
 {% if site.github_username %}
