--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,12 +2,13 @@
     <p>
       {% if site.github_username %}
         #<a href="https://github.com/{{ site.github_username }}" title="Github">
-        #<a href="https://choijangwook.github.io/cjw/" title="Github">
+        <a href="https://choijangwook.github.io/cjw/" title="Github">
           <svg><use xlink:href="#icon-github"></use></svg>
         </a>
       {% endif %}
       {% if site.facebook_username %}
-        <a href="https://www.facebook.com/{{ site.facebook_username }}" title="Facebook">
+        #<a href="https://www.facebook.com/{{ site.facebook_username }}" title="Facebook">
+        <a href="https://www.facebook.com/photo/?fbid=240500788991884&set=a.225270767181553" title="Facebook">            
           <svg><use xlink:href="#icon-facebook"></use></svg>
         </a>
       {% endif %}
