--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
       {% endif %}
       {% if site.instagram_username %}
         #<a href="https://www.instagram.com/{{ site.instagram_username }}" title="Instagram">
-        <a href="https://www.instagram.com/{{ jangwookchoi1/ }}" title="Instagram">            
+        <a href="https://www.instagram.com/jangwookchoi1/" title="Instagram">            
           <svg><use xlink:href="#icon-instagram"></use></svg>
         </a>
       {% endif %}
