--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,8 @@
         </a>
       {% endif %}
       {% if site.twitter_username %}
-        <a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter">
+        #<a href="https://twitter.com/{{ site.twitter_username }}" title="Twitter">
+        <a href="https://twitter.com/JangChoi60935" title="Twitter">            
           <svg><use xlink:href="#icon-twitter"></use></svg>
         </a>
       {% endif %}
