--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,8 @@
         </a>
       {% endif %}
       {% if site.medium_username %}
-        <a href="https://medium.com/@{{ site.medium_username }}" title="Medium">
+        #<a href="https://medium.com/@{{ site.medium_username }}" title="Medium">
+        <a href="https://medium.com/@jangwookchoi1" title="Medium">            
           <svg><use xlink:href="#icon-medium"></use></svg>
         </a>
       {% endif %}
