--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,7 +41,7 @@
     {% include links.html %}
 
     <p>
-      <span>Jekflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="/wwww.youtube.com/channel/UCkWK9iWMkPx3CtUCsNVxHrA" target="_blank" class="creator">최장욱</a>
+      <span>Jekflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="/www.youtube.com/channel/UCkWK9iWMkPx3CtUCsNVxHrA" target="_blank" class="creator">최장욱</a>
     </p>
 </footer>
 
