--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,7 +41,7 @@
     {% include links.html %}
 
     <p>
-      <span>수수하지만굉장해</span> 평택점
+      <span>수수하지만굉장해 평택점</span> 
      #<span>Jekflix</span> was made with <svg class="love"><use xlink:href="#icon-heart"></use></svg> by <a href="https://www.youtube.com/channel/UCkWK9iWMkPx3CtUCsNVxHrA" target="_blank" class="creator">Jun's world</a>
 
     </p>
