--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer>
     <p>
       {% if site.github_username %}
-        #<a href="https://github.com/{{ site.github_username }}" title="Github">
-        <a href="https://choijangwook.github.io/cjw/" title="Github">
+       #<a href="https://github.com/{{ site.github_username }}" title="Github">
+        <a href="https://www.youtube.com/channel/UCkWK9iWMkPx3CtUCsNVxHrA" title="Github">
           <svg><use xlink:href="#icon-github"></use></svg>
         </a>
       {% endif %}
