--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -41,7 +41,7 @@
     {% include links.html %}
 
     <p>
-      <span>수수하지만굉장해 평택점</span> (https://map.naver.com/p/entry/place/1709767577?lng=127.04742460000003&lat=37.038981600000014&placePath=%2Fhome&entry=plt&c=15.00,0,0,0,dh)
+      [<span>수수하지만굉장해 평택점</span>](https://map.naver.com/p/entry/place/1709767577?lng=127.04742460000003&lat=37.038981600000014&placePath=%2Fhome&entry=plt&c=15.00,0,0,0,dh)
 
     </p>
 </footer>
